--- a/docs/overrides/partials/copyright-legal-socials.html
+++ b/docs/overrides/partials/copyright-legal-socials.html
@@ -1,7 +1,7 @@
-
 <div class="copyright-legal-socials-container">
     <div class="copyright">
-        Copyright 2023 Kedro by QuantumBlack, AI by McKinsey
+        <span class="copyright-first-line">Copyright 2023 Kedro</span>
+        <span class="copyright-second-line">by QuantumBlack, AI by McKinsey</span>
     </div>
     <div class="legal-links">
         <a href="#">Terms of Use</a>
